--- a/.github/workflows/q.yml
+++ b/.github/workflows/q.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
+
     - name: Build project
        run:
         uses: actions/checkout@v2
       - name: Makefile
-        run: make
+        run: sudo apt-get update && sudo apt-get install libpq-dev && make
