--- a/.github/workflows/q.yml
+++ b/.github/workflows/q.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2.3.4
 
     - name: Build project
-       run:
-        uses: actions/checkout@v2
-      - name: Makefile
-        run: sudo apt-get update && sudo apt-get install libpq-dev && make
+      run: sudo apt-get install libpq-dev
+       
+    - name: Makefile
+      run: make
