--- a/.github/workflows/q.yml
+++ b/.github/workflows/q.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2.3.4
 
     - name: postgresql dev
-      run: sudo apt-get install postgresql-server-dev-12  -y -qq
+      run: sudo apt-get install postgresql-common postgresql-client-12  postgresql-12 libpq-dev postgresql-server-dev-12  -y -qq
        
     - name: Makefile
       run: make
